# weather_cli

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
src/: cli.rs  config.rs  errors.rs  main.rs  providers.rs  weather.rs
src/cli/: configure.rs  forecast.rs  global.rs  places.rs
src/providers/: open_weather.rs  weather_api.rs
