[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["enwilco <enwilco@gmail.com"]
license = "MIT OR Apache-2.0"
description = "CLI tool for fast access to weather forecasts"
readme = "README.md"
homepage = "https://github.com/MatviySuk/weather_cli"
repository = "https://github.com/MatviySuk/weather_cli"
keywords = ["cli", "weather"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }

chrono = "0.4.31"

tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = ["json"] }
url = "2.4.1"

serde = "1.0.190"
serde_json = "1.0.107"
serde_derive = "1.0.190"

[dependencies.confy]
version = "0.5.1"
features = ["ron_conf"]
default-features = false